refactor: Remove dead code and fix issues in benchmarking-common module
- Removed entire unused metrics pipeline framework (saved ~2,500 lines):
  - Deleted MetricsExporterFactory, PipelineFactory
  - Deleted MetricsPipeline and all processor classes
  - Deleted MetricsContext and MetricsProcessingException
- Removed useless JfrConfiguration class with do-nothing methods
- Cleaned up JfrSupport by removing 5 unused methods
- Fixed HistoricalDataManager: replaced filter().findAny().isPresent() with anyMatch()
- Fixed various code quality issues identified by IDE diagnostics
- All tests passing (120 tests)

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>